--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -95,5 +95,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/
+          path: apps/dialog/test-results
           retention-days: 30
