--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -133,21 +133,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Build Docker image
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to IONOS Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: telli.cr.de-fra.ionos.com
+          username: github-push
+          password: ${{ secrets.IONOS_REGISTRY_TOKEN_GITHUB_PUSH }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
-          COMMIT_HASH: ${{ github.sha }}
-        run: |
-          docker build --build-arg CI=${CI} --secret id=SENTRY_AUTH_TOKEN --secret id=SENTRY_ORG --secret id=SENTRY_PROJECT -f ./apps/dialog/Dockerfile -t telli/chatbot:$COMMIT_HASH .
-          docker tag telli/chatbot:$COMMIT_HASH telli.cr.de-fra.ionos.com/telli/chatbot:$COMMIT_HASH
-
-      - name: Push Docker image to IONOS registry
-        run: |
-          echo "${{ secrets.IONOS_REGISTRY_TOKEN_GITHUB_PUSH }}" | docker login --username github-push --password-stdin telli.cr.de-fra.ionos.com
-          COMMIT_HASH=${{ github.sha }}
-          docker push telli.cr.de-fra.ionos.com/telli/chatbot:$COMMIT_HASH
+        with:
+          context: .
+          file: apps/dialog/Dockerfile
+          secret-envs: |
+            SENTRY_AUTH_TOKEN=SENTRY_AUTH_TOKEN
+            SENTRY_ORG=SENTRY_ORG
+            SENTRY_PROJECT=SENTRY_PROJECT
+          build-args: CI=${CI}
+          tags: telli.cr.de-fra.ionos.com/telli/chatbot:${{ github.sha }}
+          push: true
 
   build_push_docker_image_admin:
     name: Build and push docker image telli-admin
@@ -162,17 +173,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build Docker image
-        run: |
-          COMMIT_HASH=${{ github.sha }}
-          docker build -f ./apps/admin/Dockerfile -t telli/admin:$COMMIT_HASH .
-          docker tag telli/admin:$COMMIT_HASH telli.cr.de-fra.ionos.com/telli/admin:$COMMIT_HASH
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Push Docker image to IONOS registry
-        run: |
-          echo "${{ secrets.IONOS_REGISTRY_TOKEN_GITHUB_PUSH }}" | docker login --username github-push --password-stdin telli.cr.de-fra.ionos.com
-          COMMIT_HASH=${{ github.sha }}
-          docker push telli.cr.de-fra.ionos.com/telli/admin:$COMMIT_HASH
+      - name: Log in to IONOS Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: telli.cr.de-fra.ionos.com
+          username: github-push
+          password: ${{ secrets.IONOS_REGISTRY_TOKEN_GITHUB_PUSH }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: apps/admin/Dockerfile
+          tags: telli.cr.de-fra.ionos.com/telli/admin:${{ github.sha }}
+          push: true
 
   deploy_apps:
     name: Deploy to staging
@@ -192,7 +209,6 @@ jobs:
 
       - name: Update Kubernetes deployment
         run: |
-          COMMIT_HASH=${{ github.sha }}
           echo "Updating Kubernetes deployment with image tag $COMMIT_HASH"
           kubectl set image deployment/telli-dialog-stage \
             telli-dialog-stage=telli.cr.de-fra.ionos.com/telli/chatbot:$COMMIT_HASH -n telli-stage
